ajuste de front

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Streaming - Películas y Series Online</title>
+    <title>Cinevo - Películas y Series Online</title>
+    <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/cards.css">
 </head>
@@ -11,7 +12,10 @@
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 MiStreaming</div>
+            <div class="logo">
+                <img src="assets/images/ico-cinevo.png" alt="Cinevo Logo" class="logo-img" />
+                <span class="logo-text">Cinevo</span>
+            </div>
             <ul class="nav-links">
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
@@ -27,7 +31,7 @@
     <!-- HERO -->
     <section class="hero" id="hero">
         <div class="hero-content">
-            <h1 id="heroTitle">Bienvenido a MiStreaming</h1>
+            <h1 id="heroTitle">Bienvenido a Cinevo</h1>
             <p id="heroDescription">Miles de películas y series para disfrutar</p>
             <a href="/peliculas.html" class="btn btn-primary">▶ Ver Películas</a>
             <a href="/series.html" class="btn btn-secondary">📺 Ver Series</a>
@@ -64,7 +68,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 MiStreaming. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Cinevo. Todos los derechos reservados.</p>
         <p>Sitio web de streaming gratuito</p>
     </footer>
 
