--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serie - MiStreaming</title>
+    <title>Serie - Cinevo</title>
+    <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/player.css">
+    <link rel="stylesheet" href="css/cards.css">
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 MiStreaming</div>
+            <div class="logo">🎬 Cinevo</div>
             <ul class="nav-links">
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
@@ -68,7 +69,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 MiStreaming. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Cinevo. Todos los derechos reservados.</p>
     </footer>
 
     <script src="js/app.js"></script>
@@ -99,7 +100,7 @@
         }
 
         function mostrarDetalle(serie) {
-            document.title = `${serie.titulo} - MiStreaming`;
+            document.title = `${serie.titulo} - Cinevo`;
             document.getElementById('titulo').textContent = serie.titulo;
             document.getElementById('poster').src = serie.imagen;
             document.getElementById('backdrop').style.backgroundImage = 
