--- a/reproductor.html
+++ b/reproductor.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reproductor - MiStreaming</title>
+    <title>Reproductor - Cinevo</title>
+    <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/player.css">
+    <link rel="stylesheet" href="css/cards.css">
 </head>
 <body class="player-page">
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 MiStreaming</div>
+            <div class="logo">🎬 Cinevo</div>
             <button class="btn btn-secondary" onclick="volverAtras()">← Volver</button>
         </nav>
     </header>
