--- a/series.html
+++ b/series.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Series - MiStreaming</title>
+    <title>Series - Cinevo</title>
+    <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/cards.css">
 </head>
@@ -11,7 +12,7 @@
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 MiStreaming</div>
+            <div class="logo">🎬 Cinevo</div>
             <ul class="nav-links">
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
@@ -69,7 +70,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 MiStreaming. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Cinevo. Todos los derechos reservados.</p>
     </footer>
 
     <script src="js/app.js"></script>
