ajustes de repro

--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -6,13 +6,18 @@
     <title>Serie - Cinevo</title>
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/player.css">
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 Cinevo</div>
+            <div class="logo">
+                <img src="assets/images/ico-cinevo.png" alt="Cinevo Logo" class="logo-img" />
+                <span class="logo-text">
+                    <a href="/index.html">Cinevo</a>
+                </span>
+            </div>
             <ul class="nav-links">
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
