--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <nav>
             <div class="logo">
                 <img src="assets/images/ico-cinevo.png" alt="Cinevo Logo" class="logo-img" />
-                <span class="logo-text">Cinevo</span>
+                <span class="logo-text">
+                    <a href="/index.html">Cinevo</a>
+                </span>
             </div>
             <ul class="nav-links">
                 <li><a href="/">Inicio</a></li>
