--- a/reproductor.html
+++ b/reproductor.html
@@ -6,13 +6,18 @@
     <title>Reproductor - Cinevo</title>
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/player.css">
 </head>
 <body class="player-page">
     <!-- HEADER -->
     <header>
         <nav>
-            <div class="logo">🎬 Cinevo</div>
+            <div class="logo">
+                <img src="assets/images/ico-cinevo.png" alt="Cinevo Logo" class="logo-img" />
+                <span class="logo-text">
+                    <a href="/index.html">Cinevo</a>
+                </span>
+            </div>
             <button class="btn btn-secondary" onclick="volverAtras()">← Volver</button>
         </nav>
     </header>
