ajuste de reproductor

--- a/peliculas.html
+++ b/peliculas.html
@@ -6,7 +6,7 @@
     <title>Películas - Cinevo</title>
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/player.css">
+    <link rel="stylesheet" href="css/cards.css">
 </head>
 <body>
     <!-- HEADER -->
