--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -22,6 +22,7 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
                 <li><a href="/series.html">Series</a></li>
+                <li><a href="/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
