--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
                 <li><a href="/series.html">Series</a></li>
+                <li><a href="/contacto.html">Contacto</a></li>
             </ul>
             <div class="search-box">
-                <input type="text" placeholder="Buscar..." id="searchInput">
+                <input type="text" placeholder="Buscar..." autocomplete="off" id="searchInput">
                 <button onclick="buscar()">🔍</button>
             </div>
         </nav>
