--- a/peliculas.html
+++ b/peliculas.html
@@ -22,6 +22,7 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html" class="active">Películas</a></li>
                 <li><a href="/series.html">Series</a></li>
+                <li><a href="/contacto.html">Contacto</a></li>
             </ul>
             <div class="search-box">
                 <input type="text" placeholder="Buscar películas..." id="searchInput">
