--- a/series.html
+++ b/series.html
@@ -22,6 +22,7 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/peliculas.html">Películas</a></li>
                 <li><a href="/series.html" class="active">Series</a></li>
+                <li><a href="/contacto.html">Contacto</a></li>
             </ul>
             <div class="search-box">
                 <input type="text" placeholder="Buscar series..." id="searchInput">
