--- a/contacto.html
+++ b/contacto.html
@@ -89,6 +89,7 @@
     <footer>
         <p>&copy; 2025 Cinevo. Todos los derechos reservados.</p>
     </footer>
+    <script src="js/app.js"></script>
     <script src="js/contacto.js"></script>
 </body>
 </html>
