ajustes de front

--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -70,6 +70,17 @@
                     <div class="loading">Cargando episodios...</div>
                 </div>
             </div>
+
+             <!-- SECCIÓN DE RELACIONADOS -->
+            <div class="relacionados-section">
+                <h3>Contenido Relacionado</h3>
+                <div class="relacionados-grid" id="relacionadosGrid">
+                    <div class="loading">
+                        <div class="spinner"></div>
+                        Cargando contenido relacionado...
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
