--- a/contacto.html
+++ b/contacto.html
@@ -79,8 +79,7 @@
         <!-- INFORMACIÓN ADICIONAL -->
         <div class="contact-info">
             <h3>Otras formas de contacto</h3>
-            <p>📧 Email: info@cinevo.com</p>
-            <p>📱 WhatsApp: +57 300 123 4567</p>
+            <p>📧 Email: cinevopeliculas@gmail.com</p>
             <p>🕒 Horario de atención: Lun - Vie, 9:00 AM - 6:00 PM</p>
         </div>
     </div>
