--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinevo - Películas y Series Online</title>
+    
+    <meta name="description" content="Mira【Películas y Series Online】en CINEVO, disfruta del mejor contenido en español latino y castellano. Ver películas y series gratis en HD✓.">
+    <meta name="robots" content="follow, index">
+    <meta name="keywords" content="cinevo, películas online gratis, series online gratis, ver películas, streaming gratis, películas latino, series hd">
+
+    <link rel="canonical" href="https://web-streaming-frontend.pages.dev">
+
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CINEVO 🎬 Ver Películas y Series Online Gratis en HD ✅">
+    <meta property="og:description"
+        content="Mira【Películas y Series Online】en CINEVO, disfruta del mejor contenido en español latino y castellano. Ver películas y series gratis en HD✓.">
+    <meta property="og:url" content="https://web-streaming-frontend.pages.dev">
+    <meta property="og:site_name" content="CINEVO">
+    <meta property="og:image" content="https://web-streaming-frontend.pages.dev/assets/images/ico-cinevo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CINEVO 🎬 Ver Películas y Series Online Gratis en HD ✅">
+    <meta name="twitter:description"
+        content="Mira【Películas y Series Online】en CINEVO, disfruta del mejor contenido en español latino y castellano. Ver películas y series gratis en HD✓.">
+    <meta name="twitter:image" content="https://web-streaming-frontend.pages.dev/assets/images/ico-cinevo.png">
+
+    <!-- Adicionales para SEO -->
+    <meta name="author" content="CINEVO">
+    <meta name="language" content="Spanish">
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/cards.css">
 </head>
+
 <body>
     <!-- HEADER -->
     <header>
@@ -78,4 +108,5 @@
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
