ajuste de publicidad

--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto - Cinevo</title>
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/contact.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1564632867023925"crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
