--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="assets/images/ico-cinevo.png" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/player.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1564632867023925"crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
